Replaced the temporary web with the new content

--- a/docs.html
+++ b/docs.html
@@ -3,7 +3,7 @@
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <title>Tizonia OpenMAX IL</title>
+    <title>Tizonia &gt; Documentation</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="OpenMAX IL,Khronos,multimedia,codecs,hardware acceleration,vp8,webm,mp3,decoder,open source" />
     <meta name="description" content="Tizonia OpenMAX IL Official Website." />
@@ -49,21 +49,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-
-        <p><a href="about.html">Tizonia</a> is an experimental implementation of the <a href="http://www.khronos.org/news/press/khronos-group-releases-openmax-il-1.2-provisional-specification">OpenMAX IL 1.2 provisional specification</a> from <a href="http://www.khronos.org/">The Khronos Group</a>.</p>
-        <p> The project currently includes a number of libraries written in C or C++, including an OpenMAX IL base component library, an implementation of the OpenMAX IL Core, and OS abstraction/utility library, a resource management framework and a number of OpenMAX IL components, like an MP3 decoder, a VP8 decoder, and audio and video renderers. </p>
-        <p> There is also a test execution framework written in Python that can be used to create arbitrary multimedia graphs and use cases to exercise the Tizonia OpenMAX IL components. </p>
-
-    <h3>News</h3>
-        <ul>
-          <li>2013-01-01: The Tizonia OpenMAX IL project launched. Git and Mercurial repos available on GitHub and Bitbucket.</li>
-        </ul>
-
-    <h3>Platforms</h3>
-    <ul>
-        <li>Linux (i686 and x86_64)</li>
-    </ul>
-
+  <h3>Official Documentation</h3>
+  <p>Coming soon.</p>
 
       </section>
     </div>
