Added about the author section and fixed Skema's github repo URL in download page

--- a/download/index.html
+++ b/download/index.html
@@ -59,13 +59,11 @@
 
     <p>
       <pre class='brush: bash'>
-
       # On Bitbucket, clone the Mercurial repo...
       $ hg clone https://bitbucket.org/tizonia/tizonia-openmax-il
 
       # On GitHub, clone the Git repo...
       $ git clone git://github.com/tizonia/tizonia-openmax-il.git
-
       </pre>
     </p>
 
@@ -77,7 +75,7 @@
       $ hg clone https://bitbucket.org/tizonia/skema
 
       # On GitHub, clone the Git repo...
-      $ git clone git://github.com/tizonia/skema
+      $ git clone git://github.com/tizonia/skema.git
       </pre>
     </p>
 
