--- a/about.html
+++ b/about.html
@@ -74,6 +74,9 @@
     <div class="ohlohWidget"><script type="text/javascript" src="http://www.ohloh.net/p/623271/widgets/project_languages.js"></script></div>
     <div class="clear"></div>
 
+    <h3>About the Author</h3>
+    <p>Tizonia is developed by <a href="http://www.juanrubio.me/">Juan A. Rubio</a>. Juan lives in the UK and work as a C and C++ software consultant.</p>
+
     <h3>About Website</h3>
     <p>This website is based on <a href="http://tortoisehg.org/">TortoiseHg</a>'s excellent website maintained by Steve Borho and Yuki Kodama. You can find the original source code at <a href="https://bitbucket.org/kuy/thg-web/">https://bitbucket.org/kuy/thg-web/</a> and this website's sources at <a href="https://bitbucket.org/tizonia/tizonia-web/">https://bitbucket.org/tizonia/tizonia-web/</a>. </p>
     <p>This site also uses Alex Gorbatchev's <a href="http://alexgorbatchev.com/SyntaxHighlighter/">SyntaxHighlighter</a> JavaScript package to render most of the code snippets.</p>
