Removed the language selection option and fixed the 'About Website' section updating the link to the tizonia-web-tool repo

--- a/about.html
+++ b/about.html
@@ -19,11 +19,6 @@
     <div id="header_wrap" class="outer">
       <header class="inner">
           <a id="forkme_banner" href="https://github.com/tizonia">View on GitHub</a>
-          <p id="language"><select>
-              <option value="en">English</option>
-              
-            </select>
-          </p>
 
           <h1 id="project_title">Tizonia OpenMAX IL</h1>
           <h2 id="project_tagline">An open source implementation of OpenMAX IL 1.2</h2>
@@ -78,7 +73,7 @@
     <p>Tizonia is developed by <a href="http://www.juanrubio.me/">Juan A. Rubio</a>. Juan lives in the UK and work as a C and C++ software consultant.</p>
 
     <h3>About Website</h3>
-    <p>This website is based on <a href="http://tortoisehg.org/">TortoiseHg</a>'s excellent website maintained by Steve Borho and Yuki Kodama. You can find the original source code at <a href="https://bitbucket.org/kuy/thg-web/">https://bitbucket.org/kuy/thg-web/</a> and this website's sources at <a href="https://bitbucket.org/tizonia/tizonia-web/">https://bitbucket.org/tizonia/tizonia-web/</a>. </p>
+    <p>This website is based on <a href="http://tortoisehg.org/">TortoiseHg</a>'s excellent website maintained by Steve Borho and Yuki Kodama. You can find the original source code at <a href="https://bitbucket.org/kuy/thg-web/">https://bitbucket.org/kuy/thg-web/</a> and this website's sources at <a href="https://github.com/juanrubio/tizonia-web-tool/">https://github.com/juanrubio/tizonia-web-tool/</a>. </p>
     <p>This site also uses Alex Gorbatchev's <a href="http://alexgorbatchev.com/SyntaxHighlighter/">SyntaxHighlighter</a> JavaScript package to render most of the code snippets.</p>
 
     <p>The source files of this website are licensed under the terms of the <a href="http://www.gnu.org/licenses/gpl-2.0.txt">GNU General Public License version 2</a>.</p>
