Added info about the Tizonia download tool in Download section. Also updated the manual installation page and a couple of css fixes.

--- a/download/linux.html
+++ b/download/linux.html
@@ -47,11 +47,16 @@
 
 
 <div class="block">
-    <h3 id="linux">Linux</h3>
-
-    <h4 id="sources">Intallation from sources</h4>
+    <h3 id="linux">Manual procedure</h3>
     <p>
-        <a href="install.html">How to build, install and run.</a>
+        Alternatively, you can install things manually. 
+    </p>
+
+    <p>
+        For an overview of the manual installation process, check out the following:
+    </p>
+    <p>
+        <a href="install.html">How to manually download, build, install and run.</a>
     </p>
 </div>
 
