--- a/download/index.html
+++ b/download/index.html
@@ -44,44 +44,68 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-    <h3>Clone the repos</h3>
+    <h3>Tizonia Download Tool</h3>
     <p>
-        For now, the recommemded way to try Tizonia is to clone the repos.
+        For now, the recommemded way to try <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a> is to clone the repos and build everything from source.
         The repos are mirrored on <a href="https://github.com/tizonia/">Github</a> and <a href="https://bitbucket.org/tizonia/">Bitbucket</a>.
     </p>
 
-    <h4>Tizonia OpenMAX IL</h4>
+    <p>
+        However, the <a href="http://tizonia.org/download/install.html">manual installation</a> is tedious. Instead, you can use <a href="https://github.com/tizonia/tizonia-download-tool">Tizonia's download tool</a>, which will do everything for you, including downloading the Creative Commons-licensed media files that are used throughout the <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a> unit tests and <a href="https://github.com/tizonia/skema">Skema</a>'s test suites.
+    </p>
 
+    <h4>Clone the 'Tizonia Download Tool' repo</h4>
     <p>
       <pre class='brush: bash'>
-      # On Bitbucket, clone the Mercurial repo...
-      $ hg clone https://bitbucket.org/tizonia/tizonia-openmax-il
-
-      # On GitHub, clone the Git repo...
-      $ git clone git://github.com/tizonia/tizonia-openmax-il.git
+      # From GitHub, clone the following repo...
+      $ git clone https://github.com/tizonia/tizonia-download-tool.git
       </pre>
     </p>
 
-    <h4>Skema, Tizonia's test execution framework</h4>
-
+    <h4>Run the tool</h4>
     <p>
       <pre class='brush: bash'>
-      # On Bitbucket, clone the Mercurial repo...
-      $ hg clone https://bitbucket.org/tizonia/skema
+      # Change dir to the 'bin' directory
+      $ cd tizonia-download-tool/bin
+      #
+      # Run the tool without options for bring up the help
+      #
+      $ ./tizonia-download-tool
+      Need to specify a target directory for non-interactive runs.
+      Usage: tizonia-download-tool [options]
 
-      # On GitHub, clone the Git repo...
-      $ git clone git://github.com/tizonia/skema.git
+      Options:
+        --version             show program's version number and exit
+        -h, --help            show this help message and exit
+        -i, --interactive     use this option to enable an interactive run
+        -t TARGET_DIR, --target-dir=TARGET_DIR
+                              TARGET_DIR represents the base directory that will be
+                              used by the tool to: a) download the repos and test
+                              files, b) install the software (i.e., the lib/
+                              include/ share/ and bin/ subdirs). This option is
+                              required when --interactive or -i option is not
+                              specified
+      #
+      # e.g. execute the tool like this
+      #
+      $ ./tizonia-download-tool -i -t $HOME/temp/tizonia
+      #
       </pre>
     </p>
 
 
 
 <div class="block">
-    <h3 id="linux">Linux</h3>
-
-    <h4 id="sources">Intallation from sources</h4>
+    <h3 id="linux">Manual procedure</h3>
     <p>
-        <a href="install.html">How to build, install and run.</a>
+        Alternatively, you can install things manually. 
+    </p>
+
+    <p>
+        For an overview of the manual installation process, check out the following:
+    </p>
+    <p>
+        <a href="install.html">How to manually download, build, install and run.</a>
     </p>
 </div>
 
