--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
 
 <p><a href="about.html">Tizonia</a> is an experimental implementation of the <a href="http://www.khronos.org/news/press/khronos-group-releases-openmax-il-1.2-provisional-specification">OpenMAX IL 1.2 provisional specification</a> from <a href="http://www.khronos.org/">The Khronos Group</a>.</p>
-<p><strong>Tizonia OpenMAX IL</strong> consists of a number of resources:</p>
+<p><a href="https://github.com/tizonia/tizonia-openmax-il/wiki">Tizonia OpenMAX IL</a> consists of a number of resources:</p>
 <p>
   <ul>
     <li>A fairly complete implementation of a base OpenMAX IL component library (supports Base and Interop profiles)</li>
@@ -56,7 +56,7 @@
     <li>A number of sample IL components, including an mp3 decoder (based on libmad), a vp8 decoder (based on libvpx), a SDL-based YUV renderer, etc.</li>
   </ul>
 </p>
-<p>There is also a a test execution framework written in <a href="http://www.python.org/">Python</a> called <strong><em>Skema</em></strong>, that allows the definition and execution of arbitrary OpenMAX IL graphs and use cases using an easy-to-program XML syntax. Skema internally uses <a href="http://docs.python.org/2/library/ctypes.html">Python's ctypes</a> to dynamically load and use the OpenMAX IL Core. Skema can be easily extended to support new functionality and test scenarios by defining additional XML tags also written in Python.
+<p>There is also a a test execution framework written in Python called <a href="https://github.com/tizonia/tizonia-openmax-il/wiki/Skema">Skema</a>, that allows the definition and execution of arbitrary OpenMAX IL graphs and use cases using an easy-to-program XML syntax. Skema internally uses <a href="http://docs.python.org/2/library/ctypes.html">Python's ctypes</a> to dynamically load and use the OpenMAX IL Core. Skema can be easily extended to support new functionality and test scenarios by defining additional XML tags also written in Python.
 </p>
 
 <p></p>
