Updates to bring the site up to date.

--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
           "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <title>Tizonia OpenMAX IL &gt; About</title>
+    <title>Tizonia &gt; About</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="OpenMAX IL,Khronos,multimedia,codecs,hardware acceleration,vp8,webm,mp3,decoder,open source" />
-    <meta name="description" content="Tizonia OpenMAX IL Official Website." />
+    <meta name="description" content="Tizonia Website." />
     <link rel="stylesheet" href="css/stylesheet.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="css/shCore.css" type="text/css" />
     <link rel="stylesheet" href="css/shThemeMidnight.css" type="text/css" />
@@ -20,8 +20,8 @@
       <header class="inner">
           <a id="forkme_banner" href="https://github.com/tizonia">View on GitHub</a>
 
-          <h1 id="project_title">Tizonia OpenMAX IL</h1>
-          <h2 id="project_tagline">An open source implementation of OpenMAX IL 1.2</h2>
+          <h1 id="project_title">Tizonia</h1>
+          <h2 id="project_tagline">Music player, streaming client/server, and Spotify client for Linux.</h2>
 
         </header>
       </div>
@@ -45,10 +45,10 @@
       <section id="main_content" class="inner">
         
 
-    <h3>About Tizonia OpenMAX IL</h3>
-    <p>Tizonia OpenMAX IL is an experimental implementation for Linux of the <a href="http://www.khronos.org/news/press/khronos-group-releases-openmax-il-1.2-provisional-specification">OpenMAX IL 1.2 provisional specification</a> from <a href="http://www.khronos.org/">The Khronos Group</a>.</p>
-    <p> The project currently includes a number of libraries written in C or C++, including an OpenMAX IL base component library, an implementation of the OpenMAX IL Core, and OS abstraction/utility library, a resource management framework and a number of OpenMAX IL components, like an MP3 decoder, a VP8 decoder, and audio and video renderers. </p>
-    <p>Tizonia OpenMAX IL is released under the <a href="http://www.gnu.org/licenses/lgpl-3.0.txt">GNU Lesser General Public License version 3</a> license.</p>
+    <h3>About Tizonia</h3>
+    <p>Tizonia is a multimedia framework for Linux based on <a href="http://www.khronos.org/news/press/khronos-group-releases-openmax-il-1.2-provisional-specification">OpenMAX IL 1.2</a>.</p>
+    <p> The project currently includes a number of libraries written in C or C++, including an OpenMAX IL base component library, an implementation of the OpenMAX IL Core, and OS abstraction/utility library, a resource management framework and a growing number of OpenMAX IL 1.2 components. </p>
+    <p>Tizonia is released under the <a href="http://www.gnu.org/licenses/lgpl-3.0.txt">GNU Lesser General Public License version 3</a> license.</p>
 
 
     <h3>About Skema, Tizonia's test execution framework</h3>
@@ -63,9 +63,9 @@
     <div class="clear"></div>
 
     <h3>About the Author</h3>
-    <p>Tizonia is developed by <a href="http://www.juanrubio.me/">Juan A. Rubio</a>. Juan lives in the UK and work as a C and C++ software consultant.</p>
+    <p>Tizonia is developed by <a href="http://www.juanrubio.me/">Juan A. Rubio</a>.</p>
 
-    <h3>About Website</h3>
+    <h3>About the website</h3>
     <p>This website is based on <a href="http://tortoisehg.org/">TortoiseHg</a>'s excellent website maintained by Steve Borho and Yuki Kodama. You can find the original source code at <a href="https://bitbucket.org/kuy/thg-web/">https://bitbucket.org/kuy/thg-web/</a> and this website's sources at <a href="https://github.com/juanrubio/tizonia-web-tool/">https://github.com/juanrubio/tizonia-web-tool/</a>. </p>
     <p>This site also uses Alex Gorbatchev's <a href="http://alexgorbatchev.com/SyntaxHighlighter/">SyntaxHighlighter</a> JavaScript package to render most of the code snippets.</p>
 
@@ -79,7 +79,7 @@
     <!-- FOOTER  -->
     <div class="outer">
       <footer class="inner">
-        <p>Copyright &copy; 2013 <a href="http://www.aratelia.com">Aratelia Limited</a> - <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
+        <p>Copyright &copy; 2015 <a href="http://www.aratelia.com">Aratelia Limited</a> - <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
       </footer>
     </div>
 
