--- a/download/index.html
+++ b/download/index.html
@@ -6,7 +6,7 @@
     <title>Tizonia &gt; Download</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="OpenMAX IL,Khronos,multimedia,codecs,hardware acceleration,vp8,webm,mp3,decoder,open source" />
-    <meta name="description" content="Tizonia OpenMAX IL Official Website." />
+    <meta name="description" content="Tizonia Website." />
     <link rel="stylesheet" href="../css/stylesheet.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="../css/shCore.css" type="text/css" />
     <link rel="stylesheet" href="../css/shThemeMidnight.css" type="text/css" />
@@ -20,8 +20,8 @@
       <header class="inner">
           <a id="forkme_banner" href="https://github.com/tizonia">View on GitHub</a>
 
-          <h1 id="project_title">Tizonia OpenMAX IL</h1>
-          <h2 id="project_tagline">An open source implementation of OpenMAX IL 1.2</h2>
+          <h1 id="project_title">Tizonia</h1>
+          <h2 id="project_tagline">Music player, streaming client/server, and Spotify client for Linux.</h2>
 
         </header>
       </div>
@@ -44,70 +44,14 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-    <h3>Tizonia Download Tool</h3>
+    <h3>Download the code from GitHub or Bitbucket</h3>
     <p>
-        For now, the recommemded way to try <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a> is to clone the repos and build everything from source.
-        The repos are mirrored on <a href="https://github.com/tizonia/">Github</a> and <a href="https://bitbucket.org/tizonia/">Bitbucket</a>.
+      <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a> has not been officially released yet. But the project repos can be cloned and built from source.
     </p>
 
     <p>
-        However, the <a href="http://tizonia.org/download/install.html">manual installation</a> is tedious. Instead, you can use <a href="https://github.com/tizonia/tizonia-download-tool">Tizonia's download tool</a>, which will do everything for you, including downloading the Creative Commons-licensed media files that are used throughout the <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a> unit tests and <a href="https://github.com/tizonia/skema">Skema</a>'s test suites.
+      The project is mirrored on <a href="https://github.com/tizonia/tizonia-openmax-il">GitHub</a> and <a href="https://bitbucket.org/tizonia/tizonia-openmax-il">Bitbucket</a>. Please follow the instructions there.
     </p>
-
-    <h4>Clone the 'Tizonia Download Tool' repo</h4>
-    <p>
-      <pre class='brush: bash'>
-      # From GitHub, clone the following repo...
-      $ git clone https://github.com/tizonia/tizonia-download-tool.git
-      </pre>
-    </p>
-
-    <h4>Run the tool</h4>
-    <p>
-      <pre class='brush: bash'>
-      # Change dir to the 'bin' directory
-      $ cd tizonia-download-tool/bin
-      #
-      # Run the tool without options for bring up the help
-      #
-      $ ./tizonia-download-tool
-      Need to specify a target directory for non-interactive runs.
-      Usage: tizonia-download-tool [options]
-
-      Options:
-        --version             show program's version number and exit
-        -h, --help            show this help message and exit
-        -i, --interactive     use this option to enable an interactive run
-        -t TARGET_DIR, --target-dir=TARGET_DIR
-                              TARGET_DIR represents the base directory that will be
-                              used by the tool to: a) download the repos and test
-                              files, b) install the software (i.e., the lib/
-                              include/ share/ and bin/ subdirs). This option is
-                              required when --interactive or -i option is not
-                              specified
-      #
-      # e.g. execute the tool like this
-      #
-      $ ./tizonia-download-tool -i -t $HOME/temp/tizonia
-      #
-      </pre>
-    </p>
-
-
-
-<div class="block">
-    <h3 id="linux">Manual procedure</h3>
-    <p>
-        Alternatively, you can install things manually. 
-    </p>
-
-    <p>
-        For an overview of the manual installation process, check out the following:
-    </p>
-    <p>
-        <a href="install.html">How to manually download, build, install and run.</a>
-    </p>
-</div>
 
 
       </section>
@@ -116,7 +60,7 @@
     <!-- FOOTER  -->
     <div class="outer">
       <footer class="inner">
-        <p>Copyright &copy; 2013 <a href="http://www.aratelia.com">Aratelia Limited</a> - <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
+        <p>Copyright &copy; 2015 <a href="http://www.aratelia.com">Aratelia Limited</a> - <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
       </footer>
     </div>
 
