--- a/docs.html
+++ b/docs.html
@@ -6,7 +6,7 @@
     <title>Tizonia &gt; Documentation</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="OpenMAX IL,Khronos,multimedia,codecs,hardware acceleration,vp8,webm,mp3,decoder,open source" />
-    <meta name="description" content="Tizonia OpenMAX IL Official Website." />
+    <meta name="description" content="Tizonia Website." />
     <link rel="stylesheet" href="css/stylesheet.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="css/shCore.css" type="text/css" />
     <link rel="stylesheet" href="css/shThemeMidnight.css" type="text/css" />
@@ -20,8 +20,8 @@
       <header class="inner">
           <a id="forkme_banner" href="https://github.com/tizonia">View on GitHub</a>
 
-          <h1 id="project_title">Tizonia OpenMAX IL</h1>
-          <h2 id="project_tagline">An open source implementation of OpenMAX IL 1.2</h2>
+          <h1 id="project_title">Tizonia</h1>
+          <h2 id="project_tagline">Music player, streaming client/server, and Spotify client for Linux.</h2>
 
         </header>
       </div>
@@ -44,8 +44,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-  <h3>Official Documentation</h3>
-  <p>Coming soon.</p>
+  <h3>Docs</h3>
+  <p>There is no official documentation yet. In the meantime, please visit the project's <a href="https://github.com/tizonia/tizonia-openmax-il/wiki">wiki</a></p>
 
       </section>
     </div>
@@ -53,7 +53,7 @@
     <!-- FOOTER  -->
     <div class="outer">
       <footer class="inner">
-        <p>Copyright &copy; 2013 <a href="http://www.aratelia.com">Aratelia Limited</a> - <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
+        <p>Copyright &copy; 2015 <a href="http://www.aratelia.com">Aratelia Limited</a> - <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
       </footer>
     </div>
 
