--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <h3>News</h3>
         <ul>
           <li>2014-01-18: Spotify support now available.</li>
-          <li>2013-04-10: Continuous integration available on <a href="Travis-CI">https://travis-ci.org/tizonia/tizonia-openmax-il</a>.</li>
+          <li>2013-04-10: Continuous integration available on <a href="https://travis-ci.org/tizonia/tizonia-openmax-il">https://travis-ci.org/tizonia/tizonia-openmax-il</a>.</li>
           <li>2013-01-01: The Tizonia project launched. Git and Mercurial repos available on GitHub and Bitbucket.</li>
         </ul>
 
