More updates/fixes

--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
        <div class="menu">
         <ul>
           <li><a href="index.html">News</a></li>
-          <li><a href="about.html">About</a></li>
           <li><a href="download/index.html">Download</a></li>
-          <li><a href="docs.html">Documentation</a></li>
+          <li><a href="docs.html">Docs</a></li>
           <li><a href="https://github.com/tizonia/tizonia-openmax-il/wiki">Wiki</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
        </div>
     </div>
@@ -46,31 +46,28 @@
         
 
     <h3>About Tizonia</h3>
-    <p>Tizonia is a multimedia framework for Linux based on <a href="http://www.khronos.org/news/press/khronos-group-releases-openmax-il-1.2-provisional-specification">OpenMAX IL 1.2</a>.</p>
-    <p> The project currently includes a number of libraries written in C or C++, including an OpenMAX IL base component library, an implementation of the OpenMAX IL Core, and OS abstraction/utility library, a resource management framework and a growing number of OpenMAX IL 1.2 components. </p>
+    <p>Tizonia is a multimedia project built around the <a href="http://www.khronos.org/news/press/khronos-group-releases-openmax-il-1.2-provisional-specification">OpenMAX IL 1.2 specification</a>.</p>
+    <p> The project currently includes a command line application, a number of libraries written in C or C++, including a pretty complete implementation of an OpenMAX IL 1.2 base component library, an implementation of the OpenMAX IL 1.2 Core, a resource management framework, an OS abstraction/utility library, and a growing number of OpenMAX IL 1.2 components. </p>
     <p>Tizonia is released under the <a href="http://www.gnu.org/licenses/lgpl-3.0.txt">GNU Lesser General Public License version 3</a> license.</p>
 
 
     <h3>About Skema, Tizonia's test execution framework</h3>
-    <p>Skema is a test execution framework written in Python that can be used to create arbitrary multimedia graphs and use cases to exercise the Tizonia OpenMAX IL components. </p>
-    <p>Skema borrows ideas and some of its code from Linaro's excellent <a href="http://lava-test.readthedocs.org/en/latest/">Lava-test</a> framework. </p>
+    <p>Skema is a test execution framework written in Python that is used to create and execute arbitrary multimedia graphs and use cases to exercise OpenMAX IL 1.2 components. </p>
+    <p>Skema borrows ideas and some of its code from Linaro's <a href="http://lava-test.readthedocs.org/en/latest/">Lava-test</a> framework. </p>
     <p>Skema is released under the <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GNU General Public License version 3</a> license.</p>
 
 
-    <h3>About Project</h3>
+    <h3>About the Project</h3>
     <div class="ohlohWidget"><script type="text/javascript" src="http://www.ohloh.net/p/623271/widgets/project_basic_stats.js"></script></div>
     <div class="ohlohWidget"><script type="text/javascript" src="http://www.ohloh.net/p/623271/widgets/project_languages.js"></script></div>
     <div class="clear"></div>
 
     <h3>About the Author</h3>
-    <p>Tizonia is developed by <a href="http://www.juanrubio.me/">Juan A. Rubio</a>.</p>
+    <p>Tizonia is currently developed by <a href="http://www.juanrubio.me/">Juan A. Rubio</a>. </p>
 
-    <h3>About the website</h3>
+    <h3>About this Website</h3>
     <p>This website is based on <a href="http://tortoisehg.org/">TortoiseHg</a>'s excellent website maintained by Steve Borho and Yuki Kodama. You can find the original source code at <a href="https://bitbucket.org/kuy/thg-web/">https://bitbucket.org/kuy/thg-web/</a> and this website's sources at <a href="https://github.com/juanrubio/tizonia-web-tool/">https://github.com/juanrubio/tizonia-web-tool/</a>. </p>
-    <p>This site also uses Alex Gorbatchev's <a href="http://alexgorbatchev.com/SyntaxHighlighter/">SyntaxHighlighter</a> JavaScript package to render most of the code snippets.</p>
-
     <p>The source files of this website are licensed under the terms of the <a href="http://www.gnu.org/licenses/gpl-2.0.txt">GNU General Public License version 2</a>.</p>
-    <p>SyntaxHighlighter is licensed under the terms of the <a href="http://mit-license.org/">MIT License</a> or the <a href="http://www.gnu.org/licenses/gpl-3.0.txt">GNU General Public License version 3</a>.</p>
 
 
       </section>
@@ -79,7 +76,7 @@
     <!-- FOOTER  -->
     <div class="outer">
       <footer class="inner">
-        <p>Copyright &copy; 2015 <a href="http://www.aratelia.com">Aratelia Limited</a> - <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
+        <p>Copyright &copy; 2015 <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
       </footer>
     </div>
 
