--- a/download/index.html
+++ b/download/index.html
@@ -32,10 +32,10 @@
        <div class="menu">
         <ul>
           <li><a href="../index.html">News</a></li>
-          <li><a href="../about.html">About</a></li>
           <li><a href="../download/index.html">Download</a></li>
-          <li><a href="../docs.html">Documentation</a></li>
+          <li><a href="../docs.html">Docs</a></li>
           <li><a href="https://github.com/tizonia/tizonia-openmax-il/wiki">Wiki</a></li>
+          <li><a href="../about.html">About</a></li>
         </ul>
        </div>
     </div>
@@ -46,11 +46,7 @@
         
     <h3>Download the code from GitHub or Bitbucket</h3>
     <p>
-      <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a> has not been officially released yet. But the project repos can be cloned and built from source.
-    </p>
-
-    <p>
-      The project is mirrored on <a href="https://github.com/tizonia/tizonia-openmax-il">GitHub</a> and <a href="https://bitbucket.org/tizonia/tizonia-openmax-il">Bitbucket</a>. Please follow the instructions there.
+      <a href="https://github.com/tizonia/tizonia-openmax-il">Tizonia</a> is still under development and has not been officially released yet. However the project is mirrored on <a href="https://github.com/tizonia/tizonia-openmax-il">GitHub</a> and <a href="https://bitbucket.org/tizonia/tizonia-openmax-il">Bitbucket</a>. Please follow the instructions there to build the project from source.
     </p>
 
 
@@ -60,7 +56,7 @@
     <!-- FOOTER  -->
     <div class="outer">
       <footer class="inner">
-        <p>Copyright &copy; 2015 <a href="http://www.aratelia.com">Aratelia Limited</a> - <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
+        <p>Copyright &copy; 2015 <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
       </footer>
     </div>
 
