--- a/docs.html
+++ b/docs.html
@@ -32,10 +32,10 @@
        <div class="menu">
         <ul>
           <li><a href="index.html">News</a></li>
-          <li><a href="about.html">About</a></li>
           <li><a href="download/index.html">Download</a></li>
-          <li><a href="docs.html">Documentation</a></li>
+          <li><a href="docs.html">Docs</a></li>
           <li><a href="https://github.com/tizonia/tizonia-openmax-il/wiki">Wiki</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
        </div>
     </div>
@@ -44,8 +44,8 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         
-  <h3>Docs</h3>
-  <p>There is no official documentation yet. In the meantime, please visit the project's <a href="https://github.com/tizonia/tizonia-openmax-il/wiki">wiki</a></p>
+  <h3>Documentation</h3>
+  <p>The project <a href="http://tizonia-openmax-il.readthedocs.org/en/latest/">documentation</a> is currently work-in-progress. In the meantime, please visit the project's <a href="https://github.com/tizonia/tizonia-openmax-il/wiki">wiki</a></p>
 
       </section>
     </div>
@@ -53,7 +53,7 @@
     <!-- FOOTER  -->
     <div class="outer">
       <footer class="inner">
-        <p>Copyright &copy; 2015 <a href="http://www.aratelia.com">Aratelia Limited</a> - <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
+        <p>Copyright &copy; 2015 <a href="http://www.juanrubio.me">Juan A. Rubio</a></p>
       </footer>
     </div>
 
